// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropSpot should be rendered correctly 1`] = `
<div
  className="root"
>
  <div
    className="dropArea"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="uui-flex-row root size-24 container align-items-center"
      style={
        Object {
          "columnGap": undefined,
          "rowGap": undefined,
        }
      }
    >
      <div
        className="container uui-icon uui-enabled iconBlue"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
      <div
        className="root uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography line-height-24 font-size-14 v-padding-0 dropCaption container"
      >
        Drop files to attach or
      </div>
      <div>
        <input
          className="fileInput"
          multiple={true}
          onChange={[Function]}
          type="file"
        />
        <div
          className="uui-typography uui-typography-size-14"
        >
          <button
            className="uui-button-box uui-enabled -clickable uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary link"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="uui-caption uui-link-button-weight-semibold"
            >
              browse
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropSpot should be rendered correctly with props 1`] = `
<div
  className="root"
>
  <div
    className="dropArea"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="uui-flex-row root size-24 container align-items-center"
      style={
        Object {
          "columnGap": undefined,
          "rowGap": undefined,
        }
      }
    >
      <div
        className="container uui-icon uui-enabled iconBlue"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
      <div
        className="root uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography line-height-24 font-size-14 v-padding-0 dropCaption container"
      >
        Drop files to attach or
      </div>
      <div>
        <input
          className="fileInput"
          multiple={true}
          onChange={[Function]}
          type="file"
        />
        <div
          className="uui-typography uui-typography-size-14"
        >
          <button
            className="uui-button-box uui-enabled -clickable uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary link"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="uui-caption uui-link-button-weight-semibold"
            >
              browse
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="root uui-text uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography line-height-24 font-size-14 v-padding-0 container"
    >
      Test info
    </div>
  </div>
</div>
`;
